Replace dropbox via github release file storage.