@@ -1,21 +1,13 @@
-# git clone https://github.com/daggerok/jboss
-# docker build -t daggerok/jboss -f jboss/Dockerfile .
-# docker tag daggerok/jboss daggerok/jboss:alpine
-# docker tag daggerok/jboss daggerok/jboss:latest
-# docker push daggerok/jboss
-
 FROM openjdk:8u151-jdk-alpine
 MAINTAINER Maksim Kostromin https://github.com/daggerok
 
-ARG JBOSS_USER="jboss-eap-6.4"
-ARG DROPBOX_HASH_ARG="xl2io9dhc6zxw9m"
-ARG JBOSS_FILE_ARG="jboss-eap-6.4.0.zip"
+ARG JBOSS_USER_ARG="jboss-eap-6.4"
 ARG JBOSS_ADMIN_USER_ARG="admin"
 ARG JBOSS_ADMIN_PASSWORD_ARG="Admin.123"
 
-ENV DROPBOX_HASH=${DROPBOX_HASH_ARG} \
-    JBOSS_FILE=${JBOSS_FILE_ARG}
-ENV JBOSS_URL="https://www.dropbox.com/s/${DROPBOX_HASH}/${JBOSS_FILE}" \
+ENV JBOSS_USER=${JBOSS_USER_ARG}
+ENV JBOSS_FILE="jboss-eap-6.4.0.zip"
+ENV JBOSS_URL="https://github.com/daggerok/jboss/releases/download/eap/${JBOSS_FILE}" \
     JBOSS_ADMIN_PASSWORD=${JBOSS_ADMIN_PASSWORD_ARG} \
     JBOSS_ADMIN_USER=${JBOSS_ADMIN_USER_ARG} \
     JBOSS_USER_HOME="/home/${JBOSS_USER}"
@@ -33,6 +25,13 @@ RUN apk --no-cache --update add busybox-suid bash wget ca-certificates unzip sud
 USER ${JBOSS_USER}
 WORKDIR ${JBOSS_USER_HOME}
 
+ARG JAVA_OPTS_ARGS="\
+ -Djava.net.preferIPv4Stack=true \
+ -XX:+UnlockExperimentalVMOptions \
+ -XX:+UseCGroupMemoryLimitForHeap \
+ -XshowSettings:vm "
+ENV JAVA_OPTS="${JAVA_OPTS} ${JAVA_OPTS_ARGS}"
+
 CMD /bin/bash
 EXPOSE 8080 9990 8443
 ENTRYPOINT /bin/bash ${JBOSS_HOME}/bin/standalone.sh
@@ -48,7 +47,7 @@ RUN wget ${JBOSS_URL} -O ${JBOSS_USER_HOME}/${JBOSS_FILE} \
 # HEALTHCHECK --timeout=2s --retries=22 \                                                       #
 #         CMD wget -q --spider http://127.0.0.1:8080/my-service/health \                        #
 #          || exit 1                                                                            #
-# COPY --chown=jboss-eap-6.4 ./target/*.war ${JBOSS_HOME}/standalone/deployments/my-service.war #
+# COPY --chown=jboss ./target/*.war ${JBOSS_HOME}/standalone/deployments/my-service.war         #
 #################################################################################################
 
 ############################## DEBUG | MULTI-DEPLOYMENTS USAGE ##################################
@@ -57,6 +56,5 @@ RUN wget ${JBOSS_URL} -O ${JBOSS_USER_HOME}/${JBOSS_FILE} \
 # ENV JAVA_OPTS="$JAVA_OPTS -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=5005" #
 # EXPOSE 5005                                                                                   #
 # # Multi builds:                                                                               #
-# COPY --chown=jboss-eap-6.4 ./target/*.war ${JBOSS_HOME}/standalone/deployments/               #
+# COPY --chown=jboss ./target/*.war ${JBOSS_HOME}/standalone/deployments/                       #
 #################################################################################################
-
